Fix direction section z-index fixed

--- a/source/sass/blocks/direction-section.scss
+++ b/source/sass/blocks/direction-section.scss
@@ -170,7 +170,7 @@
 
 .direction-section__container {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   display: grid;
   margin-top: -11px;
   padding: 26px 24px 22px;
